--- a/app/views/renalware/medications/_form.html.slim
+++ b/app/views/renalware/medications/_form.html.slim
@@ -17,8 +17,8 @@ ruby:
     = f.input :route_description, label: "Route Description"
     = f.input :frequency, label: "Frequency & Duration"
     = f.input :notes
-    = f.input :start_date, as: :date_picker, label: "Prescribed on"
-    = f.input :end_date, as: :date_picker, label: "Terminated on"
+    = f.input :start_date, as: :date_picker
+    = f.input :end_date, as: :date_picker
     = f.input :provider, collection: Renalware::Provider.codes,
         as: :radio_buttons, checked: Renalware::Provider.first,
         label_method: -> (attr) { " " + I18n.t("enums.provider.#{attr}") }
