--- a/app/views/renalware/medications/_form.html.slim
+++ b/app/views/renalware/medications/_form.html.slim
@@ -14,7 +14,7 @@ ruby:
     = f.input :dose
     = f.association :medication_route, collection: medication_routes,
         label_method: :code, prompt: :translate
-    = f.input :route_description, label: "Route Description"
+    = f.input :route_description
     = f.input :frequency, label: "Frequency & Duration"
     = f.input :notes
     = f.input :start_date, as: :date_picker
