--- a/app/views/renalware/medications/_form.html.slim
+++ b/app/views/renalware/medications/_form.html.slim
@@ -19,9 +19,8 @@ ruby:
     = f.input :notes
     = f.input :start_date, as: :date_picker
     = f.input :end_date, as: :date_picker
-    = f.input :provider, collection: provider_codes,
-        as: :radio_buttons, checked: provider_codes.first,
-        label_method: -> (code) { " " + I18n.t(code, scope: "enums.provider") }
+    = f.input :provider, collection: provider_codes, as: :radio_buttons,
+        checked: provider_codes.first
 
   .row
     .large-offset-3.large-7.columns
