Sort problems using drag & drop

--- a/app/views/renalware/problems/problems/index.html.slim
+++ b/app/views/renalware/problems/problems/index.html.slim
@@ -16,9 +16,10 @@
         td.options
         td Description
         td Recorded on
-    tbody
+        td
+    = content_tag(:tbody, class: "sortables", data: { rel: sort_patient_problems_path(@patient) }) do
       - @problems.reject(&:new_record?).each do |problem|
-        tr.problem
+        = content_tag_for(:tr, problem, class: "sortable") do
           td
             = link_to "View", patient_problem_path(@patient, problem)
             = pipe_separator
@@ -31,3 +32,5 @@
               - problem.notes.each do |note|
                 li= note.description
           td= l problem.updated_at.to_date
+          td.handle
+            i.fa.fa-reorder
