--- a/app/views/renalware/problems/notes/index.js.erb
+++ b/app/views/renalware/problems/notes/index.js.erb
@@ -1,3 +1,1 @@
-$("#problem-notes").html("<%= escape_javascript(
-  render "table", problem: @problem, notes: @notes
-) %>");
+<%= refresh("#problem-notes", partial: "table", locals: local_assigns) %>
