--- a/app/views/renalware/hd/dry_weights/index.html.slim
+++ b/app/views/renalware/hd/dry_weights/index.html.slim
@@ -3,12 +3,12 @@
     table.auto-layout
       thead
         th
-        th= sort_link(@query.search, :assessed_on, "Date")
-        th= sort_link(@query.search, :weight, "Weight (kg)")
+        th= sort_link(search, :assessed_on, "Date")
+        th= sort_link(search, :weight, "Weight (kg)")
         th Assessor
 
       tbody
-        - @dry_weights.each do |dry_weight|
+        - dry_weights.each do |dry_weight|
           = render "row", dry_weight: dry_weight
 
-    = paginate @dry_weights
+    = paginate dry_weights
