Just pass through the local assigns to table

--- a/app/views/renalware/medications/index.html.slim
+++ b/app/views/renalware/medications/index.html.slim
@@ -1,6 +1,2 @@
 = render layout: "renalware/patients/layout", locals: { title: "Medications" } do
-  = render "index",
-      query: query,
-      patient: patient,
-      treatable: treatable,
-      medications: medications
+  = render "index", local_assigns
