Use standardize variable name

--- a/app/views/renalware/exit_site_infections/show.html.slim
+++ b/app/views/renalware/exit_site_infections/show.html.slim
@@ -11,7 +11,7 @@
 
   = field_set_tag "Antibiotics/Routes" do
     = render "renalware/medications/index",
-        query: nil,
+        search: nil,
         patient: @patient,
         treatable: @treatable,
         medications: @medications
