--- a/app/views/renalware/peritonitis_episodes/show.html.slim
+++ b/app/views/renalware/peritonitis_episodes/show.html.slim
@@ -11,7 +11,7 @@
 
   = field_set_tag "antibiotics/routes" do
     = render "renalware/medications/index",
-        query: nil,
+        search: nil,
         patient: @patient,
         treatable: @treatable,
         medications: @medications
