--- a/app/views/renalware/patients/_side_nav.html.slim
+++ b/app/views/renalware/patients/_side_nav.html.slim
@@ -8,7 +8,7 @@ ul.side-nav
   li.link= link_to "Medications (#{@patient.medications.length})", patient_medications_path(@patient)
   li.link= link_to "Events (#{Renalware::Events::Event.for_patient(@patient).count})", patient_events_path(@patient)
   li.link= link_to "Clinic Visits (#{@patient.clinic_visits.length})", patient_clinic_visits_path(@patient)
-  li.link= link_to "Letters (#{@patient.letters.length})", patient_letters_path(@patient)
+  li.link= link_to "Letters (#{@patient.letters.length})", patient_letters_letters_path(@patient)
   li.link= link_to "Access Summary (#{ActiveType.cast(@patient, Renalware::Accesses::Patient).profiles.count})", patient_accesses_dashboard_path(@patient)
   li.divider
   li.heading Regimes
