--- a/app/views/renalware/letters/letters/_letter.html.slim
+++ b/app/views/renalware/letters/letters/_letter.html.slim
@@ -1,11 +1,12 @@
 tr
   td
-    = link_to 'Preview', patient_letters_letter_path(patient_id: letter.patient.to_param, id: letter.to_param)
+    = link_to 'Preview', patient_letters_letter_path(letter.patient, letter)
     = pipe_separator
-    = link_to 'Edit', edit_patient_letters_letter_path(patient_id: letter.patient.to_param, id: letter.to_param)
-    = pipe_separator
-    = link_to 'Delete', patient_letters_letter_path(patient_id: letter.patient.to_param, id: letter.to_param), method: :delete
-  td= author_view?(letter) ? letter.patient.full_name : letter.author.full_name
-  td= letter.description.text
-  td= letter.state
-  td= letter.updated_at
+    = link_to 'Edit', edit_patient_letters_letter_path(letter.patient, letter)
+  td= letter.class.name
+  td= l letter.issued_on
+  td= letter.author
+  td
+  td= letter.description
+  td= letter.state.text
+  td= l letter.updated_at
