--- a/app/views/renalware/letters/letters/edit.html.slim
+++ b/app/views/renalware/letters/letters/edit.html.slim
@@ -1,8 +1,8 @@
-= render layout: "renalware/patients/layout", locals: { title: "Letters" } do
-  .row
-    .large-12.columns
-      = simple_form_for [@patient, @letter], as: :letter,
-        url: patient_letters_letter_path(patient_id: @patient.to_param, id: @letter.to_param) do |f|
+= render layout: "renalware/patients/layout", locals: { title: "Access Profile" } do
+  = render "letter_nav"
 
-        = render partial: 'renalware/letters/letters/form', locals: { f: f }
-        = f.submit 'Update', class: 'button save'
+  .document
+    = simple_form_for @letter,
+        url: patient_letters_letter_path(@patient, @letter),
+        wrapper: "horizontal_form" do |f|
+      = render 'form', f: f
