--- a/app/views/renalware/letters/letters/edit.html.slim
+++ b/app/views/renalware/letters/letters/edit.html.slim
@@ -1,4 +1,4 @@
-= render layout: "renalware/patients/layout", locals: { title: "Access Profile" } do
+= render layout: "renalware/patients/layout", locals: { title: "Letters" } do
   = render "letter_nav"
 
   .document
