Change tab order

--- a/app/views/renalware/letters/letters/_form.html.slim
+++ b/app/views/renalware/letters/letters/_form.html.slim
@@ -41,9 +41,12 @@ ruby:
               .row
                 .small-6.columns
                   = fa.input :city
-                  = fa.input :postcode
                 .small-6.columns
                   = fa.input :county
+              .row
+                .small-6.columns
+                  = fa.input :postcode
+                .small-6.columns
                   = fa.input :country, as: :string
 
 
