Improve code based on code review

--- a/app/views/renalware/letters/letters/_letter.html.slim
+++ b/app/views/renalware/letters/letters/_letter.html.slim
@@ -6,7 +6,7 @@ tr
   td Simple Letter
   td= l letter.issued_on
   td= letter.author
-  td= letter.recipient
+  td= letter.recipient_name
   td= letter.description
   td= letter.state.text
   td= l letter.updated_at
