Add cc_on_all_letters and improve patient's form a bit

--- a/app/views/renalware/patients/_organisation_practice_form.html.slim
+++ b/app/views/renalware/patients/_organisation_practice_form.html.slim
@@ -1,12 +1,4 @@
-ul.no-bullet
-  li
-    = patient.input :gp_practice_code, label: "GP Practice Code"
-
-  li
-    = patient.input :pct_org_code, label: "PCT Organisation Code"
-
-  li
-    = patient.input :hospital_centre_code, label: "Hospital Centre Code"
-
-  li
-    = patient.input :primary_esrf_centre, label: "Primary ESRF Centre"
+= patient.input :gp_practice_code, label: "GP Practice Code", input_html: { class: "small-input" }
+= patient.input :pct_org_code, label: "PCT Organisation Code", input_html: { class: "small-input" }
+= patient.input :hospital_centre_code, label: "Hospital Centre Code", input_html: { class: "small-input" }
+= patient.input :primary_esrf_centre, label: "Primary ESRF Centre", input_html: { class: "small-input" }
