Use web depth acceptance test
Not sure why I added a request spec here. This conforms with our test standards.

--- a/app/views/renalware/pathology/observations/index.html.slim
+++ b/app/views/renalware/pathology/observations/index.html.slim
@@ -1,5 +1,5 @@
 = render layout: "renalware/patients/layout", locals: { title: "Archived Pathology Results" } do
-  table
+  table#observations
     thead
       tr
         th Date
