Implement tool tips
This required separating out the pure collection of string implementation used to verify the feature in the acceptance test.

--- a/app/views/renalware/pathology/observations/index.html.slim
+++ b/app/views/renalware/pathology/observations/index.html.slim
@@ -3,7 +3,7 @@
   table#observations
     - rows.each do |row|
       - header, *values = row
-      tr class= header.downcase
+      tr class= header.html_class title= header.title
         td
           = header
         - values.each do |cell|
