--- a/app/views/renalware/pathology/observations/index.html.slim
+++ b/app/views/renalware/pathology/observations/index.html.slim
@@ -1,10 +1,13 @@
 = render layout: "renalware/patients/layout", locals: { title: "Archived Pathology Results" } do
-  p #{number_of_records} archived results displayed. Hover over row header for investigation name.
-  table#observations
-    - rows.each do |row|
-      - header, *values = row
-      tr class= header.html_class title= header.title
-        td
-          = header
-        - values.each do |cell|
-          td= cell
+  - if rows.present?
+    p #{number_of_records} archived results displayed. Hover over row header for investigation name.
+    table#observations
+      - rows.each do |row|
+        - header, *values = row
+        tr class= header.html_class title= header.title
+          td
+            = header
+          - values.each do |cell|
+            td= cell
+  - else
+    p No results available for this patient.
