--- a/app/views/renalware/pathology/observations/index.html.slim
+++ b/app/views/renalware/pathology/observations/index.html.slim
@@ -1,6 +1,8 @@
 = render layout: "renalware/patients/layout", locals: { title: "Archived Pathology Results" } do
   - if rows.present?
-    p #{number_of_records} archived results displayed. Hover over row header for investigation name.
+
+    p Most recent pathology results (max #{number_of_records} displayed). Hover over row header for investigation name.
+
     table#observations
       - rows.each do |row|
         - header, *values = row
