--- a/app/views/renalware/pathology/observations/index.html.slim
+++ b/app/views/renalware/pathology/observations/index.html.slim
@@ -1,6 +1,8 @@
 = render layout: "renalware/patients/layout", locals: { title: "Archived Pathology Results" } do
-  - if rows.present?
+  - if rows.empty?
+    p No results available for this patient.
 
+  - else
     p Most recent pathology results (max #{number_of_records} displayed). Hover over row header for investigation name.
 
     table#observations
@@ -11,5 +13,3 @@
             = header
           - values.each do |cell|
             td= cell
-  - else
-    p No results available for this patient.
