--- a/app/views/renalware/pathology/historical_observations/index.html.slim
+++ b/app/views/renalware/pathology/historical_observations/index.html.slim
@@ -3,8 +3,17 @@
     p No results available for this patient.
 
   - else
+    - header, *body = rows
     table#observations
-      - rows.each do |row|
+      thead
+        tr
+          - header.each do |cell|
+            th class= cell.html_class title= cell.title
+              = cell
+
+      tbody
+      - body.each do |row|
         tr
           - row.each do |cell|
-            td= cell
+            td class= cell.html_class
+              = cell
