--- a/app/views/renalware/letters/letters/_form.html.slim
+++ b/app/views/renalware/letters/letters/_form.html.slim
@@ -43,7 +43,7 @@ ruby:
 
     .small-offset-3.small-9.columns
       #letter-ccs
-        = f.simple_fields_for :cc_recipients, f.object.cc_recipients.manual do |ff|
+        = f.simple_fields_for :cc_recipients, f.object.manual_cc_recipients do |ff|
           = render 'cc_recipient_fields', f: ff
 
       .call-to-action
