fix type casting issues with clinics patient in specs

--- a/app/views/renalware/clinics/clinic_visits/_form.html.slim
+++ b/app/views/renalware/clinics/clinic_visits/_form.html.slim
@@ -1,5 +1,5 @@
 = render partial: "renalware/shared/errors", locals: {model: f.object}
-
+/ TODO: Fix this form so that the inputs are named "clinic_vist[attribute]" and not "clinics_vist[attribute]"
 .simple_form
   .row
     .large-12.columns
