--- a/app/assets/stylesheets/renalware/typography.css.scss
+++ b/app/assets/stylesheets/renalware/typography.css.scss
@@ -35,3 +35,13 @@ span.note {
   color: #999;
   font-size: 0.8rem;
 }
+
+.hint {
+  color: #aaa;
+  display: block;
+  font-size: 0.75rem;
+  font-style: italic;
+  font-weight: normal;
+  margin-bottom: 0.25rem;
+  padding: 0.2rem 0rem;
+}
