--- a/app/views/renalware/pathology/recent_observations/index.html.slim
+++ b/app/views/renalware/pathology/recent_observations/index.html.slim
@@ -3,7 +3,7 @@
     p No results available for this patient.
 
   - else
-    p Most recent pathology results (max #{number_of_records} displayed). Hover over row header for investigation name.
+    p.hint Most recent pathology results (max #{number_of_records} displayed). Hover over row header for investigation name.
 
     table#observations
       - rows.each do |row|
