Allow the injection of an observation scope
This will allow a controller to inject pagination

--- a/app/views/renalware/pathology/historical_observations/index.html.slim
+++ b/app/views/renalware/pathology/historical_observations/index.html.slim
@@ -20,3 +20,5 @@
             - row.each do |cell|
               td class= cell.html_class
                 = cell
+
+        // pagination goes here
