--- a/app/views/renalware/pathology/historical_observations/index.html.slim
+++ b/app/views/renalware/pathology/historical_observations/index.html.slim
@@ -3,7 +3,7 @@
     p No results available for this patient.
 
   - else
-    p.hint Hover over table then scroll horizontally to view older results.
+    p.hint Hover over table then scroll horizontally to view more results.
 
     div.embedded-scroll
       - header, *body = rows
