Extract table generation into a class
This was pretty ugly as template code and makes more sense to extract it into a class

--- a/app/views/renalware/pathology/historical_observations/index.html.slim
+++ b/app/views/renalware/pathology/historical_observations/index.html.slim
@@ -6,19 +6,6 @@
     p.hint Hover over table then scroll horizontally to view more results.
 
     div.embedded-scroll
-      - header, *body = rows
-      table#observations
-        thead
-          tr
-            - header.each do |cell|
-              th class= cell.html_class title= cell.title
-                = cell
-
-        tbody
-        - body.each do |row|
-          tr
-            - row.each do |cell|
-              td class= cell.html_class
-                = cell
+      = table.render(rows)
 
     = paginate paginator
