--- a/app/views/renalware/pathology/recent_observations/index.html.slim
+++ b/app/views/renalware/pathology/recent_observations/index.html.slim
@@ -5,12 +5,4 @@
   - else
     p.hint Most recent pathology results (max #{number_of_records} displayed). Hover over row header for investigation name.
 
-    table#observations
-      - rows.each do |row|
-        - header, *values = row
-        tr
-          td title= header.title
-            = header
-            - values.each do |cell|
-              td class= cell.html_class
-                = cell
+    = table.render(rows)
