--- a/app/views/renalware/pathology/recent_observations/index.html.slim
+++ b/app/views/renalware/pathology/recent_observations/index.html.slim
@@ -3,6 +3,6 @@
     p No results available for this patient.
 
   - else
-    p.hint Most recent pathology results (max #{number_of_records} displayed). Hover over row header for investigation name.
+    p.hint Most recent pathology results (max #{paginator.limit_value} displayed). Hover over row header for investigation name.
 
     = table.render(rows)
