--- a/app/views/renalware/pathology/recent_observation_results/index.html.slim
+++ b/app/views/renalware/pathology/recent_observation_results/index.html.slim
@@ -1,4 +1,5 @@
-= render layout: "renalware/patients/layout", locals: { title: "Archived Pathology Results" } do
+- opts = { title: "Archived Pathology Results", navigation_partial: "renalware/pathology/navigation" }
+= render layout: "renalware/patients/layout", locals: opts do
   - if rows.empty?
     p No results available for this patient.
 
