--- a/app/views/renalware/letters/letters/_form_recipient.html.slim
+++ b/app/views/renalware/letters/letters/_form_recipient.html.slim
@@ -1,7 +1,7 @@
 - f.object.build_address if f.object.address.blank?
-= f.input :name, wrapper: "vertical_form"
 = f.simple_fields_for :address, wrapper: "vertical_form" do |fa|
   = fa.input :id, as: :hidden
+  = fa.input :name
   = fa.input :street_1
   = fa.input :street_2
   .row
