--- a/app/views/renalware/letters/letters/_cc_recipient_fields.html.slim
+++ b/app/views/renalware/letters/letters/_cc_recipient_fields.html.slim
@@ -1,6 +1,8 @@
 .nested-fields
   .row
     fieldset
+      - f.object.person_role = :outsider
+      = f.input :person_role, as: :hidden
       = render "form_recipient", f: f
 
     .right
