Add organisation_name to Address

--- a/app/views/renalware/addresses/_address.html.slim
+++ b/app/views/renalware/addresses/_address.html.slim
@@ -1,4 +1,10 @@
 dl
+  dt Name
+  dd= address.name
+
+  dt Organisation Name
+  dd= address.organisation_name
+
   dt Street 1
   dd= address.street_1
 
