Refactor code based on code review

--- a/app/views/renalware/letters/letters/_cc_recipient_fields.html.slim
+++ b/app/views/renalware/letters/letters/_cc_recipient_fields.html.slim
@@ -1,8 +1,7 @@
 .nested-fields
   .row
     fieldset
-      - f.object.person_role = :outsider
-      = f.input :person_role, as: :hidden
+      = f.input :person_role, as: :hidden, input_html: { value: "outsider" }
       = render "form_recipient", f: f
 
     .right
