--- a/app/views/renalware/letters/letters/_cc_recipient_fields.html.slim
+++ b/app/views/renalware/letters/letters/_cc_recipient_fields.html.slim
@@ -1,7 +1,7 @@
 .nested-fields
   .row
     fieldset
-      = f.input :person_role, as: :hidden, input_html: { value: "outsider" }
+      = f.input :person_role, as: :hidden, input_html: { value: "other" }
       = render "form_recipient", f: f
 
     .right
