--- a/app/views/renalware/letters/letters/_form.html.slim
+++ b/app/views/renalware/letters/letters/_form.html.slim
@@ -42,7 +42,7 @@ ruby:
 
     .small-offset-3.small-9.columns
       #letter-ccs
-        = f.simple_fields_for :cc_recipients, f.object.outsider_cc_recipients do |ff|
+        = f.simple_fields_for :cc_recipients, f.object.other_cc_recipients do |ff|
           = render 'cc_recipient_fields', f: ff
 
       .call-to-action
